# etiss_riscv_examples

./: .gitmodules  CMakeLists.txt  README.md  elffile.ini.in  etiss.ld.in  riscv-toolchain.cmake  rv32gc-llvm-toolchain.cmake  rv32gc-toolchain.cmake  rv64gc-llvm-toolchain.cmake  rv64gc-toolchain.cmake
riscv_crt0/: CMakeLists.txt  crt0.S
riscv_crt0/semihost/: CMakeLists.txt  etiss-semihost.specs  fixes.c
target_code/: CMakeLists.txt  README.md
target_code/48bit_test/: CMakeLists.txt  main.c
target_code/c/: CMakeLists.txt  main.c
target_code/cpp/: CMakeLists.txt  main.cpp
target_code/dhry/: CMakeLists.txt  dhry.h  dhry_1.c
target_code/embench/: CMakeLists.txt
target_code/hello_world/: CMakeLists.txt  main.c
target_code/interactive/: CMakeLists.txt  main.c
target_code/s4emac/: CMakeLists.txt  main.c
target_code/semihosting_cpp/: CMakeLists.txt  main.cpp
target_code/test_cases/: CMakeLists.txt  main.c
target_code/test_cases/aes/: aes.c  aes.h
target_code/test_cases/edge/: edge.c  edge.h
target_code/test_cases/endianness/: endianness.c  endianness.h
target_code/test_cases/fir/: fir.c  fir.h
target_code/test_cases/heap/: heap.c  heap.h
target_code/test_cases/iir/: iir.c  iir.h
target_code/test_cases/isort/: isort.c  isort.h
target_code/test_cases/jdct/: jdct.c  jdct.h
target_code/test_cases/pi/: pi.c  pi.h
target_code/test_cases/simple_tests/: test.c  test.h
target_code/tflm/: CMakeLists.txt
target_code/tflm/aww/: CMakeLists.txt  main.cpp
target_code/tflm/aww_muriscvnn/: CMakeLists.txt  aww_data  main.cpp
target_code/tflm/ic/: CMakeLists.txt  main.cpp
target_code/tflm/ic_muriscvnn/: CMakeLists.txt  main.cpp
target_code/tflm/tflm_toy/: main.cpp
target_code/tflm/tflm_toy/tensorflow/lite/micro/memory_planner/: greedy_memory_planner.h
target_code/tflm/toy/: CMakeLists.txt  main.cpp
target_code/tflm/toy/tensorflow/lite/micro/memory_planner/: linear_memory_planner.h
target_code/tflm/toy_muriscvnn/: CMakeLists.txt  main.cpp  toy_data
target_code/tflm/toy_muriscvnn/mlf/codegen/host/include/: tvmgen_default.h
target_code/tflm/vww/: CMakeLists.txt  main.cpp
target_code/tflm/vww_muriscvnn/: CMakeLists.txt  main.cpp  vww_data
target_code/tflm_toy/: CMakeLists.txt  main.cpp
target_code/tflm_toy/mlf/: metadata.json
target_code/tflm_toy/mlf/codegen/host/src/: default_lib0.c  default_lib1.c
target_code/tvm/: CMakeLists.txt
target_code/tvm/aww/: CMakeLists.txt  main.c
target_code/tvm/aww/mlf/: metadata.json
target_code/tvm/aww/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm/aww/mlf/codegen/host/src/: default_lib0.c  default_lib1.c
target_code/tvm/aww/mlf/src/: default.relay  default.relay2
target_code/tvm/aww_muriscvnn/: CMakeLists.txt  main.c
target_code/tvm/aww_muriscvnn/mlf/: metadata.json
target_code/tvm/aww_muriscvnn/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm/aww_muriscvnn/mlf/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
target_code/tvm/aww_muriscvnn/mlf/src/: default.relay
target_code/tvm/aww_muriscvnn/mlf_vext/: metadata.json
target_code/tvm/aww_muriscvnn/mlf_vext/codegen/host/include/: tvmgen_default.h
target_code/tvm/aww_muriscvnn/mlf_vext/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
target_code/tvm/aww_muriscvnn/mlf_vext/src/: default.relay  default.relay2
target_code/tvm/ic/: CMakeLists.txt  main.c
target_code/tvm/ic/mlf/: metadata.json
target_code/tvm/ic/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm/ic/mlf/codegen/host/src/: default_lib0.c  default_lib1.c
target_code/tvm/ic/mlf/src/: default.relay  default.relay2
target_code/tvm/ic_muriscvnn/: CMakeLists.txt  ic_data  main.c
target_code/tvm/ic_muriscvnn/mlf/: metadata.json
target_code/tvm/ic_muriscvnn/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm/ic_muriscvnn/mlf/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
target_code/tvm/ic_muriscvnn/mlf/src/: default.relay  default.relay2
target_code/tvm/ic_muriscvnn/mlf_vext/: metadata.json
target_code/tvm/ic_muriscvnn/mlf_vext/codegen/host/include/: tvmgen_default.h
target_code/tvm/ic_muriscvnn/mlf_vext/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
target_code/tvm/ic_muriscvnn/mlf_vext/src/: default.relay
target_code/tvm/toy/: CMakeLists.txt  main.c
target_code/tvm/toy/mlf/: metadata.json
target_code/tvm/toy/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm/toy/mlf/codegen/host/src/: default_lib0.c  default_lib1.c
target_code/tvm/toy/mlf/src/: default.relay  default.relay2
target_code/tvm/toy_muriscvnn/: CMakeLists.txt  main.c
target_code/tvm/toy_muriscvnn/mlf/: metadata.json
target_code/tvm/toy_muriscvnn/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm/toy_muriscvnn/mlf/codegen/host/src/: default_lib0.c  default_lib1.c  default_lib2.c
target_code/tvm/toy_muriscvnn/mlf/src/: default.relay
target_code/tvm/toy_muriscvnn/mlf_vext/: metadata.json
target_code/tvm/toy_muriscvnn/mlf_vext/codegen/host/include/: tvmgen_default.h
target_code/tvm/toy_muriscvnn/mlf_vext/codegen/host/src/: default_lib0.c  default_lib1.c  (+1 more)
target_code/tvm/toy_muriscvnn/mlf_vext/src/: default.relay  default.relay2
target_code/tvm/vww/: CMakeLists.txt  main.c
target_code/tvm/vww/mlf/: metadata.json
target_code/tvm/vww/mlf/src/: default.relay  default.relay2
target_code/tvm/vww_muriscvnn/: CMakeLists.txt  main.c
target_code/tvm/vww_muriscvnn/mlf/: metadata.json
target_code/tvm/vww_muriscvnn/mlf/src/: default.relay  default.relay2
target_code/tvm/vww_muriscvnn/mlf_vext/: metadata.json
target_code/tvm/vww_muriscvnn/mlf_vext/src/: default.relay
target_code/tvm_ic/mlf/codegen/host/src/: default_lib1.c
target_code/tvm_toy/: CMakeLists.txt  main.c
target_code/tvm_toy/mlf/src/: default.relay
target_code/tvm_vww/mlf/codegen/host/include/: tvmgen_default.h
target_code/tvm_vww/mlf/codegen/host/src/: default_lib0.c
target_code/weight_clustering/: CMakeLists.txt  cfu.h  foobar.c  foobar.h  main.c
(+20 files in other folders)
