set(SYSCALL_BACKEND "SEMIHOST" CACHE STRING "Select syscall backend (SEMIHOST, HTIF, CUSTOM)")
set_property(CACHE SYSCALL_BACKEND PROPERTY STRINGS SEMIHOST HTIF CUSTOM)

if(SYSCALL_BACKEND STREQUAL "SEMIHOST")
    message(STATUS "Using libgloss + semihosting syscalls")
    add_subdirectory(semihost)
elseif(SYSCALL_BACKEND STREQUAL "HTIF")
    message(STATUS "Using libgloss + HTIF syscalls")
    add_subdirectory(htif)
elseif(SYSCALL_BACKEND STREQUAL "CUSTOM")
    message(STATUS "Using custom ETISS logger plugin syscalls")
    add_subdirectory(custom)
else()
    message(FATAL_ERROR "Unknown SYSCALL_BACKEND=${SYSCALL_BACKEND}")
endif()
