add_subdirectory(toy)
add_subdirectory(aww)
add_subdirectory(vww)
add_subdirectory(ic)

add_custom_target(tflm_examples)
add_dependencies(tflm_examples tflm_toy tflm_aww tflm_vww tflm_ic)

IF(MURISCVNN)
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/muriscv-nn/Source)
    add_subdirectory(toy_muriscvnn)
    add_subdirectory(aww_muriscvnn)
    add_subdirectory(vww_muriscvnn)
    add_subdirectory(ic_muriscvnn)
    add_custom_target(tflm_muriscvnn_examples)
    add_dependencies(tflm_muriscvnn_examples tflm_toy_muriscvnn tflm_aww_muriscvnn tflm_vww_muriscvnn tflm_ic_muriscvnn)
  else()
    message(WARNING "Skipping muriscvnn programs due to missing sources")
  endif()
ENDIF(MURISCVNN)
