add_subdirectory(toy)
add_subdirectory(aww)
add_subdirectory(vww)
add_subdirectory(ic)

add_custom_target(tvm_examples)
add_dependencies(tvm_examples tvm_toy tvm_aww tvm_vww tvm_ic)

IF(MURISCVNN)
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdparty/muriscv-nn)
    add_subdirectory(toy_muriscvnn)
    add_subdirectory(aww_muriscvnn)
    add_subdirectory(vww_muriscvnn)
    add_subdirectory(ic_muriscvnn)
    add_custom_target(tvm_muriscvnn_examples)
    add_dependencies(tvm_muriscvnn_examples tvm_toy_muriscvnn tvm_aww_muriscvnn tvm_vww_muriscvnn tvm_ic_muriscvnn)
  else()
    message(WARNING "Skipping muriscvnn programs due to missing sources")
  endif()
ENDIF(MURISCVNN)
